[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/grass.png" type="Texture" id=1]
[ext_resource path="res://script/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/home_button.png" type="Texture" id=4]
[ext_resource path="res://assets/home_button_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/ARCADECLASSIC.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ball.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="Settings" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.333333
anchor_top = 0.333333
anchor_right = 0.666667
anchor_bottom = 0.666667
theme = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="Control"]
anchor_left = -0.125
anchor_top = -0.375
anchor_right = 1.125
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/Container"]
margin_top = 11.0
margin_right = 320.0
margin_bottom = 60.0
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSliderContainer" type="HBoxContainer" parent="Control/Container"]
margin_top = 64.0
margin_right = 320.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="Control/Container/MusicSliderContainer"]
margin_top = 11.0
margin_right = 65.0
margin_bottom = 36.0
rect_min_size = Vector2( 65, 25 )
custom_fonts/font = SubResource( 1 )
text = "MUSIC"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="Control/Container/MusicSliderContainer"]
margin_left = 69.0
margin_right = 320.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
max_value = 1.0
step = 0.01
value = 0.5
scrollable = false

[node name="SFXSliderContainer" type="HBoxContainer" parent="Control/Container"]
margin_top = 116.0
margin_right = 320.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="Control/Container/SFXSliderContainer"]
margin_top = 11.0
margin_right = 65.0
margin_bottom = 36.0
rect_min_size = Vector2( 65, 25 )
custom_fonts/font = SubResource( 1 )
text = "SFX"
align = 1
valign = 1

[node name="SFXSlider" type="HSlider" parent="Control/Container/SFXSliderContainer"]
margin_left = 69.0
margin_right = 320.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
max_value = 1.0
step = 0.01
value = 0.5
scrollable = false

[node name="HomeButton" type="TextureButton" parent="Control"]
anchor_left = -0.9375
anchor_top = -0.875
anchor_right = -0.8125
anchor_bottom = -0.625
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="value_changed" from="Control/Container/MusicSliderContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Control/Container/SFXSliderContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="Control/HomeButton" to="." method="_on_HomeButton_pressed"]
